<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding16"
    tools:context="com.example.android.popularmovies.details.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/i1"
                    android:layout_width="@dimen/coverImageWidth"
                    android:layout_height="@dimen/coverImageHeight"
                    android:scaleType="fitXY"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding16">
                    <TextView
                        android:id="@+id/t1"
                        android:textSize="@dimen/textSize22"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/rating"
                            android:padding="@dimen/padding16"
                            android:textSize="@dimen/textSize16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/t3"
                            android:textSize="@dimen/textSize16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding16">
                        <TextView
                            android:text="@string/release"
                            android:textSize="@dimen/textSize16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/t4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
            <TextView
                android:text="@string/synopsis"
                android:textSize="@dimen/textSize18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/t2"
                android:textSize="@dimen/textSize18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/trailers"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/textSize18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                />

            <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                android:id="@+id/listViewYt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                />

            <TextView
                android:onClick="expandColapseReviews"
                android:text="@string/reviews"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/textSize18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                />

            <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                android:id="@+id/listViewRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                />


        </LinearLayout>
</ScrollView>


</LinearLayout>
